# one-electron-equation

./: INSTALL  README  clean-all  install-all
doc/: how-to-run.txt  input-parameters.txt  potential-definition.txt
exm/01HarmOsc/: param.inp  rschr-asm.out  rschr-bjacobi.out  rschr-cg.out  rschr-gamg-a.out  rschr-gamg-b.out  rschr-gamg-c.out  rschr-gamg.out  rschr-gmres.out  rschr-gmres40.out  rschr.out  run-boreasz.ll  run-halo2.ll  run-notos.ll
exm/01HarmOsc-a/: param.inp  pot.def  rschr.out
exm/02/: param.inp  pot.def  rschr.out  run-mpi
exm/108Pot/B/: param.inp
exm/108Pot/C/: param.inp
exm/108Pot/D/: param.inp
exm/108Pot/E/: param.inp
exm/108Pot/F/: param.inp
exm/108Pot/G/: param.inp
exm/127Pot/: run-all
exm/128Pot/: run-all
ins/boreasz-pwr/: INSTALL  install-lapack  install-parmetis  install-petsc-a  install-petsc-c  install-rschr  install-slepc
ins/boreasz-pwr/parmetis-4.0.2/: CMakeLists.txt  Makefile
ins/linux-gcc/: install-all  install-lapack  install-parmetis  install-petsc  install-rschr  install-slepc
ins/notos-bgp/: INSTALL  install-all  install-lapack  install-parmetis  install-petsc-a  install-petsc-b  install-petsc-c  install-rschr  install-slepc
lib/lapack-3.4.1/: make.inc
src/: Makefile  bspline.cpp  bspline.d  bspline.h  cubat.cpp  cubat.d  cubat.h  eigsol.cpp  eigsol.d  eigsol.h  graph.cpp  graph.d  graph.h  graphbspl.cpp  graphbspl.d  graphbspl.h  main.cpp  main.d  ovrkinelt.cpp  ovrkinelt.d  ovrkinelt.h  paramdb.cpp  paramdb.d  paramdb.h  potcache.h  potcachehash.cpp  potcachehash.d  potcachehash.h  potcachetree.cpp  potcachetree.d  potcachetree.h  potelt.cpp  potelt.d  potelt.h  poten.cpp  poten.d  poten.h  recmtx.cpp  recmtx.d  recmtx.h  (+7 more)
utl/gendos/: gendos-compile  gendos.cpp  gendos.h  gendos.x  main.cpp
utl/genpot/: genpot-compile  genpot.cpp  genpot.x
(+348 files in other folders)
